--- a/app/globals.css
+++ b/app/globals.css
@@ -4,14 +4,14 @@
 
 @layer base {
   :root {
-    --radius: 0.625rem;
+    --radius: 0;
     --background: 0 0% 100%;
     --foreground: 0 0% 14.5%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 14.5%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 14.5%;
-    --primary: 18 89% 52%;
+    --primary: 20, 100%, 50%;
     --primary-foreground: 0 0% 98.5%;
     --secondary: 0 0% 97%;
     --secondary-foreground: 0 0% 20.5%;
@@ -41,7 +41,7 @@
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 18 89% 52%;
+    --primary: 20, 100%, 50%;
     --primary-foreground: 0 0% 98.5%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
