feat: ui revamp for faucet and activity card

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,8 @@
     --accent-foreground: 0 0% 0%;
     --destructive: 0 90% 55%;
     --destructive-foreground: 0 100% 98%;
-    --border: 0 0% 92.2%;
-    --input: 0 0% 92.2%;
+    --border: 0 0% 0% / 0.2;
+    --input: 0 0% 0% / 0.2;
     --ring: 0 0% 70.8%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -48,8 +48,8 @@
     --accent-foreground: 0 0% 98%;
     --destructive: 0 80% 45%;
     --destructive-foreground: 0 100% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
+    --border: 0 0% 0% / 0.2;
+    --input: 0 0% 0% / 0.2;
     --ring: 0 0% 83.1%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
